# PumpController

./: .gitignore  AmplifierCheck.cppcheck  CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp  mainwindow.cpp  mainwindow.h  pch.h  readme.md  vcpkg.json
.github/workflows/: cpp.yml
apps/: CMakeLists.txt  appinfo.rc  main.cpp  resources.qrc  resources.rc
businessLogic/: CMakeLists.txt  common.h  controller.cpp  controller.h  csvLog.cpp  csvLog.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h  pch.h  settings.cpp  settings.h  version.h  version.h.in
cmake/: buildCounter.cmake  buildTargets.cmake  compilerDefOpt.cmake  cpack.cmake  dependencies.cmake  findDependencies.cmake  options.cmake  paths.cmake  printInfo.cmake
common/: CMakeLists.txt  controller.cpp  controller.h  csvLog.cpp  csvLog.h  mainwindow.cpp  mainwindow.h  model.h  pch.h  settings.cpp  settings.h
common/common/: version.h
resources/: resources.qrc
source/: CMakeLists.txt  common.h  controller.cpp  controller.h  csvLog.cpp  csvLog.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  pch.h  settings.cpp  settings.h  setupcontroller.cpp  setupcontroller.h  startcontroller.cpp  startcontroller.h  version.h  version.h.in
source/resources/: resources.qrc
tests/: CMakeLists.txt  commonstability.cpp  controllertests.cpp  csvLogtests.cpp  mainwindowtests.cpp  modeltests.cpp  settingstests.cpp  unit_tests.cpp
tests/unit/: CMakeLists.txt  commonstability.cc  controllertests.cc  csvLogtests.cc  mainwindowtests.cc  modeltests.cc  settingstests.cc
